--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "compare-versions": "^3.6.0"
+    "compare-versions": "^3.6.0",
+    "debuggable-eval": "^1.0.0"
   }
 }
