--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "id": "customjs",
   "name": "CustomJS",
-  "version": "1.0.13",
+  "version": "1.0.14",
   "minAppVersion": "0.9.12",
-  "description": "This plugin allows for the loading and reuse of custom JS inside your vault.",
+  "description": "This plugin allows for the loading and reuse of custom javascript files inside your vault.",
   "author": "Sam Lewis",
   "authorUrl": "https://github.com/samlewis0602",
   "isDesktopOnly": false
