--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "main.js",
   "scripts": {
     "dev": "rollup --config rollup.config.js -w",
-    "build": "rollup --config rollup.config.js --environment BUILD:production"
+    "build": "rollup --config rollup.config.js --environment BUILD:production",
+    "lint": "eslint --ext .ts .",
+    "lint-fix": "eslint  '--fix  --ext .ts .'",
+    "format": "prettier --write ."
   },
   "keywords": [],
   "author": "Sam Lewis",
@@ -14,9 +17,14 @@
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-typescript": "^8.2.1",
-    "@types/node": "^14.14.37",
+    "@types/node": "^18.14.37",
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "@typescript-eslint/parser": "^6.17.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-prettier": "^5.1.2",
     "obsidian": "^0.12.0",
     "obsidian-dataview": "^0.4.11",
+    "prettier": "^3.1.1",
     "rollup": "^2.32.1",
     "rollup-plugin-copy": "^3.4.0",
     "tslib": "^2.2.0",
