--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
       - name: 'Install dependencies'
         run: npm install
       - name: 'Build'
-        run: npm run build
+        run: npm run build-ci
   lint:
     runs-on: ubuntu-latest
     steps:
