--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "rollup --config rollup.config.js -w",
     "build": "rollup --config rollup.config.js --environment BUILD:production",
+    "build-ci": "npm run build -- --failAfterWarnings",
     "lint": "eslint --ext .ts .",
     "lint-fix": "eslint  '--fix  --ext .ts .'",
     "format": "prettier --write ."
