Add GH actions (#82)
* packages: bump node and add nvmrc

* packages: commit package-lock

* github-actions: add build / lint actions

* lint: ban console

* github-actions: fail build step on warnings

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "rollup --config rollup.config.js -w",
     "build": "rollup --config rollup.config.js --environment BUILD:production",
+    "build-ci": "npm run build -- --failAfterWarnings",
     "lint": "eslint --ext .ts .",
     "lint-fix": "eslint  '--fix  --ext .ts .'",
     "format": "prettier --write ."
@@ -17,7 +18,7 @@
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-typescript": "^8.2.1",
-    "@types/node": "^18.14.37",
+    "@types/node": "^20.10.6",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.56.0",
