Adjust Prettier EOL handling for better cross-platform compatibility
Otherwise you suddenly have 500 errors and only the correct line ends are uploaded to git.

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,6 +4,7 @@
   "singleQuote": true,
   "bracketSpacing": true,
   "useTabs": false,
+  "endOfLine": "auto",
   "overrides": [
     {
       "files": [".prettierrc", ".eslintrc"],
