--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "CustomJS",
   "version": "1.0.20",
   "minAppVersion": "0.9.12",
-  "description": "This plugin allows for the loading and reuse of custom javascript files inside your vault.",
+  "description": "This plugin lets you use custom javascript files inside your vault.",
   "author": "Sam Lewis",
   "authorUrl": "https://github.com/samlewis0602",
   "isDesktopOnly": false
